--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
+DateTime==4.3
 et-xmlfile==1.0.1
 jdcal==1.4.1
 numpy==1.19.4
@@ -12,3 +13,4 @@ six==1.15.0
 soupsieve==2.1
 xlrd==2.0.1
 xlwt==1.3.0
+zope.interface==5.2.0
