Add Webex chatbot script

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 beautifulsoup4==4.9.3
 bs4==0.0.1
+certifi==2020.12.5
+chardet==4.0.0
 DateTime==4.3
 et-xmlfile==1.0.1
+future==0.18.2
+idna==2.10
 jdcal==1.4.1
 numpy==1.19.4
 openpyxl==3.0.5
 pandas==1.2.0
+PyJWT==2.0.0
 PySnooper==0.4.2
 python-dateutil==2.8.1
 pytz==2020.5
+requests==2.25.1
+requests-toolbelt==0.9.1
 six==1.15.0
 soupsieve==2.1
+urllib3==1.26.2
+webexteamssdk==1.6
 xlrd==2.0.1
 xlwt==1.3.0
 zope.interface==5.2.0
